<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aglona Reader</string>
    <string name="menu_library">Library</string>
    <string name="menu_navigation">Navigation</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_book_info">Book</string>
    <string name="pref_category_highlighting">Color highlighting</string>
    <string name="pref_title_highlight_first_words">First words</string>
    <string name="pref_title_highlight_fragments">Fragments</string>
	<string name="pref_title_speak_text">Speak selected text (advanced reading mode only)</string>
	<string name="pref_title_sound_effects">Sound effects</string>
	<string name="pref_title_highlight_brightness">Brightness</string>
    <string name="pref_title_font_size">Font size</string>
    <string name="pref_summary_font_size">Adjust font size with a slider</string>
    <string name="pref_summary_off_book_reverse">Source on the left, translation on the right</string>
    <string name="pref_summary_on_book_reverse">Translation on the left, source on the right</string>
	<string name="checkbox_reverse">Reverse</string>
	<string name="book_info_src">Source</string>
	<string name="book_info_trn">Translation</string>
	<string name="book_info_author">Author</string>
	<string name="book_info_title">Title</string>
	<string name="book_info_info">Info</string>
	<string name="book_info_number_of_fragments">Fragments:</string>
	<string name="reading_mode">Reading mode</string>
	<string name="add_from_sd_card">Add from SD card</string>
	<string name="remove">Remove</string>
	<string name="library_is_empty">The library is empty.\nPress \&quot;Add from SD card\&quot; button below to add PBO files.</string>
	<string name="loading_please_wait">Loading, please wait…</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="remove_all">Remove all</string>
	<string name="cancel">Cancel</string>
	<string name="removing_item">Removing item</string>
	<string name="remove_item_library_q">Remove this item from your library (the file will remain on SD card)?</string>
	<string name="confirm">Please confirm</string>
	<string name="remove_all_library_q">Really remove all items from this list (all files will remain on SD card)?</string>
	<string name="empty_book">No book is open.\nSelect one from Library.</string>
	<string name="contents_are_empty">No structure information present</string>
	<string name="left">Left</string>
	<string name="right">Right</string>
	<string name="error_loading_file">An error happened while trying to load the file!\nFile absent or format incorrect</string>
	<string name="tts_init_fail">Warning: Android text-to-speech system failed to initialize.</string>
</resources>