<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <ListPreference
        android:defaultValue="0"
        android:key="pref_key_reading_mode"
        android:title="@string/reading_mode"
        android:entries="@array/readingModesTitles"
        android:entryValues="@array/readingModes"
        />

    <PreferenceCategory android:title="@string/pref_category_highlighting" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_highlight_first_words"
            android:title="@string/pref_title_highlight_first_words"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_highlight_fragments"
            android:title="@string/pref_title_highlight_fragments" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_speak_text"
            android:title="@string/pref_title_speak_text" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_sound_effects"
            android:title="@string/pref_title_sound_effects" />
    </PreferenceCategory>

    // I found no simple way to implement "Done" control, so: (crw)
    <PreferenceCategory android:title=" "></PreferenceCategory> // draw a line
    <PreferenceCategory
        android:title="        Use [Back] button to return">
    </PreferenceCategory>

</PreferenceScreen>
